--- a/package.json
+++ b/package.json
@@ -1,38 +1,44 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "frontendmasters-gatsby",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "Bare-bones starter for the Gatsby Frontend Masters workshop.",
   "version": "0.1.0",
-  "license": "0BSD",
+  "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "develop": "GATSBY_GRAPHQL_IDE=playground gatsby develop",
+    "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
+    "analyze": "ANALYZE_BUNDLE_SIZE=true gatsby build"
   },
   "dependencies": {
-    "bootstrap": "^4.5.0",
-    "bulma": "^0.9.0",
-    "gatsby": "^2.23.12",
-    "gatsby-plugin-react-helmet": "^3.3.10",
-    "gatsby-source-filesystem": "^2.3.20",
-    "gatsby-transformer-remark": "^2.8.25",
+    "@emotion/core": "^10.0.22",
+    "@emotion/styled": "^10.0.23",
+    "@mdx-js/mdx": "^1.5.1",
+    "@mdx-js/react": "^1.5.1",
+    "gatsby": "^2.18.6",
+    "gatsby-background-image": "^0.9.11",
+    "gatsby-image": "^2.4.14",
+    "gatsby-plugin-emotion": "^4.1.16",
+    "gatsby-plugin-mdx": "^1.0.59",
+    "gatsby-plugin-react-helmet": "^3.1.16",
+    "gatsby-plugin-sharp": "^2.3.5",
+    "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
+    "gatsby-remark-images": "^3.1.35",
+    "gatsby-source-filesystem": "^2.1.40",
+    "gatsby-source-instagram": "^0.6.1",
+    "gatsby-transformer-sharp": "^2.3.6",
     "react": "^16.12.0",
-    "react-bootstrap": "^1.2.2",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^5.2.1"
   },
   "devDependencies": {
-    "prettier": "2.0.5"
+    "prettier": "^1.19.1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/jlengstorf/frontendmasters-gatsby"
   }
 }
